--- a/index.html
+++ b/index.html
@@ -106,23 +106,25 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12"><h2>meet the team.</h2></div>
-                        <div class="section-2-team">
-                            <div class="team">
-                            <div class="col-xs-6 col-md-6">
+                        <div class="team">
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="team-image">
+                                    <div>
                                     <img src="файлы/team-1.png" alt="">
+                                    <div class="overlay"></div>
+                                </div>
                                     <div class="team-icons">
                                         <a href="" class="team-icon icon-twiter"></a>
                                         <a href="" class="team-icon icon-facebook"></a>
                                         <a href="" class="team-icon icon-in"></a>
                                     </div>
+                                    <div class="team-name">
+                                        <p>Gloria Bromley</p>
+                                        <p>CEO and Founder</p>
+                                    </div>
                                 </div>
-                                <div class="team-name">
-                                <p>Gloria Bromley</p>
-                                <p>CEO and Founder</p>
                             </div>
-                            </div>
-                            <div class="col-xs-6 col-md-6">
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="team-image">
                                     <img src="файлы/team-2.png" alt="">
                                     <div class="team-icons">
@@ -130,15 +132,13 @@
                                         <a href="" class="team-icon icon-facebook"></a>
                                         <a href="" class="team-icon icon-in"></a>
                                     </div>
-                                </div>
-                                <div class="team-name">
-                                <p>Paul Torres</p>
-                                <p>Head of Development</p>
+                                    <div class="team-name">
+                                        <p>Paul Torres</p>
+                                        <p>Head of Development</p>
+                                    </div>
                                 </div>
                             </div>
-                            </div>
-                            <div class="team">
-                            <div class="col-xs-6 col-md-6">
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="team-image">
                                     <img src="файлы/team-3.png" alt="">
                                     <div class="team-icons">
@@ -146,13 +146,13 @@
                                         <a href="" class="team-icon icon-facebook"></a>
                                         <a href="" class="team-icon icon-in"></a>
                                     </div>
+                                    <div class="team-name">
+                                        <p>Judith Gillette</p>
+                                        <p>Graphic Desinger</p>
+                                        </div>
                                 </div>
-                                <div class="team-name">
-                                <p>Judith Gillette</p>
-                                <p>Graphic Desinger</p>
-                                </div>
-                            </div>
-                            <div class="col-xs-6 col-md-6">
+                                                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="team-image">
                                 <img src="файлы/team-4.png" alt="">
                                 <div class="team-icons">
@@ -160,12 +160,12 @@
                                     <a href="" class="team-icon icon-facebook"></a>
                                     <a href="" class="team-icon icon-in"></a>
                                 </div>
-                                </div>
                                 <div class="team-name">
-                                <p>Delores Reed</p>
-                                <p>Client Service Director</p>
+                                    <p>Delores Reed</p>
+                                    <p>Client Service Director</p>
+                                    </div>
                                 </div>
-                            </div>
+                                
                             </div>
                         </div>
                         
