--- a/index.html
+++ b/index.html
@@ -172,6 +172,99 @@
                     </div>
                 </div>
             </section>
+            <section class="section-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12"><h2>lovely work.</h2></div>
+                        <div class="work">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="row">
+                                    <div class="work-block">
+                                        <div class="work-image">
+                                            <img src="файлы/work-1.png" alt="">
+                                            <div class="overlay-dark"></div>
+                                        </div>
+                                        <a href="" class="work-icon"></a>
+                                        <div class="work-name">
+                                            <p>partnership guidlines</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="row">
+                                    <div class="work-block">
+                                        <div class="work-image">
+                                            <img src="файлы/work-2.png" alt="">
+                                            <div class="overlay-dark"></div>
+                                        </div>
+                                        <a href="" class="work-icon"></a>
+                                        <div class="work-name">
+                                            <p>partnership guidlines</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="row">
+                                    <div class="work-block">
+                                        <div class="work-image">
+                                            <img src="файлы/work-3.png" alt="">
+                                            <div class="overlay-dark"></div>
+                                        </div>
+                                        <a href="" class="work-icon"></a>
+                                        <div class="work-name">
+                                            <p>partnership guidlines</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="row">
+                                    <div class="work-block">
+                                        <div class="work-image">
+                                            <img src="файлы/work-4.png" alt="">
+                                            <div class="overlay-dark"></div>
+                                        </div>
+                                        <a href="" class="work-icon"></a>
+                                        <div class="work-name">
+                                            <p>partnership guidlines</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="row">
+                                    <div class="work-block">
+                                        <div class="work-image">
+                                            <img src="файлы/work-5.png" alt="">
+                                            <div class="overlay-dark"></div>
+                                        </div>
+                                        <a href="" class="work-icon"></a>
+                                        <div class="work-name">
+                                            <p>partnership guidlines</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="row">
+                                    <div class="work-block">
+                                        <div class="work-image">
+                                            <img src="файлы/work-6.png" alt="">
+                                            <div class="overlay-dark"></div>
+                                        </div>
+                                        <a href="" class="work-icon"></a>
+                                        <div class="work-name">
+                                            <p>partnership guidlines</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 </body>
