--- a/index.html
+++ b/index.html
@@ -178,7 +178,6 @@
                         <div class="col-xs-12 col-sm-12 col-md-12"><h2>lovely work.</h2></div>
                         <div class="work">
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <div class="row">
                                     <div class="work-block">
                                         <div class="work-image">
                                             <img src="файлы/work-1.png" alt="">
@@ -189,10 +188,8 @@
                                             <p>partnership guidlines</p>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <div class="row">
                                     <div class="work-block">
                                         <div class="work-image">
                                             <img src="файлы/work-2.png" alt="">
@@ -203,10 +200,8 @@
                                             <p>partnership guidlines</p>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <div class="row">
                                     <div class="work-block">
                                         <div class="work-image">
                                             <img src="файлы/work-3.png" alt="">
@@ -217,10 +212,8 @@
                                             <p>partnership guidlines</p>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <div class="row">
                                     <div class="work-block">
                                         <div class="work-image">
                                             <img src="файлы/work-4.png" alt="">
@@ -231,10 +224,8 @@
                                             <p>partnership guidlines</p>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <div class="row">
                                     <div class="work-block">
                                         <div class="work-image">
                                             <img src="файлы/work-5.png" alt="">
@@ -245,10 +236,8 @@
                                             <p>partnership guidlines</p>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-4">
-                                <div class="row">
                                     <div class="work-block">
                                         <div class="work-image">
                                             <img src="файлы/work-6.png" alt="">
@@ -259,8 +248,61 @@
                                             <p>partnership guidlines</p>
                                         </div>
                                     </div>
-                                </div>
                             </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-12">
+                            <div class="btn-show-me-more">
+                            <button>show me more</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section-4">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12"><h2>what we do.</h2></div>
+                    </div>
+                    <div class="what-we-do">
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-1.png" alt=""></div>
+                            <h3>Easy theme Setup</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-2.png" alt=""></div>
+                            <h3>pixel perfect design</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-3.png" alt=""></div>
+                            <h3>responsive display</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-4.png" alt=""></div>
+                            <h3>24/7 support</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-1.png" alt=""></div>
+                            <h3>Easy theme Setup</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-2.png" alt=""></div>
+                            <h3>pixel perfect design</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-3.png" alt=""></div>
+                            <h3>responsive display</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3">
+                            <div class="what-we-do-icon"><img src="файлы/what-we-do-4.png" alt=""></div>
+                            <h3>24/7 support</h3>
+                            <p>Nunc mattis lorem in leo lobortis, ut venenatis justo commodo. Maecenas a justo nec velit egestas fermentum.</p>
                         </div>
                     </div>
                 </div>
