--- a/index.html
+++ b/index.html
@@ -307,6 +307,36 @@
                     </div>
                 </div>
             </section>
+            <section class="section-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12"><h2>features.</h2></div>
+                        <div class="features">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="features-block">
+                                    <div class="features-image"><img src="файлы/features-1.png" alt=""></div>
+                                    <h3>Product Design: Eames Chairs</h3>
+                                    <p>Eames designs are certainly iconic. Everyone of us know at least two or three of their famous chairs. I would even risk saying that most of us dream about having a nice Eames.</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="features-block">
+                                    <div class="features-image"><img src="файлы/features-2.png" alt=""></div>
+                                    <h3>Elegant and Colorful Logos</h3>
+                                    <p>I’ve always found logo design to be one of the most challenging things to get right. There’s so much that a logo can say about a brand without actually saying it.</p>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="features-block">
+                                    <div class="features-image"><img src="файлы/features-3.png" alt=""></div>
+                                    <h3>A Showcase of Creative</h3>
+                                    <p>It’s always interesting to see another designer’s take on a famous website, app or even physical product. Different designers add their own personality and style.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 </body>
