footer and fix fonts

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-7 col-md-7">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique ndolor non, ornare sagittis dolor. Nulla vestibulu lacus sed molestie gravida. Crferm entum  quismagna congue, vel sodales arcu vestibulum. Nunc lobortis dui magna, quis lacusullamcorper at. </p>
-                    <p>Phasellus sollicitudin ante eros ornare, <span class="bold">sit amet luctus lorem semper.<span></span> Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
+                    <p>Phasellus sollicitudin ante eros ornare, <span class="bold">sit amet luctus lorem semper.</span> Suspendisse posuere, quamdictum consectetur, augue metus pharetra tellus, eu feugiatloreg egetnisi. Cras ornare bibendum ante, ut bibendum odio convallis eget. vel sodales arcu vestibulum</p>
                     <div class="section-1-icon">
                         <a href="" class="icon-facebook"></a>
                         <a href="" class="icon-twiter"></a>
@@ -337,7 +337,53 @@
                     </div>
                 </div>
             </section>
+            <section class="section-6">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12">
+                            <h2>stay in touch.</h2>
+                        </div>
+                    </div>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1282.5245440535796!2d36.23060118694236!3d49.991689130572034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a0f06f9c731d%3A0xcabf759630b2fc52!2z0J_QsNC80Y_RgtC90LjQuiDQvdC10LfQsNCy0LjRgdC40LzQvtGB0YLQuA!5e0!3m2!1sru!2sua!4v1630247057766!5m2!1sru!2sua" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </section>
+            <section class="section-7">
+                <div class="container">
+                    <div class="row">
+                        <div class="contact">
+                        <div class="col-xs-12 col-sm-12 col-md-12"><h3>contact information</h3></div>
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida. </p>
+                            <p>Cras fermentum elit quis magna congue, <span class="bold">vel sodales</span> arcu vestibulum. Nunc lobortis dui magna, quis dapibus lacus </p>
+                            <button class="btn-send">send message</button>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
+    <footer>
+        <div class="footer-background">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div class="footer-blocks">
+                        <div class="col-xs-12 col-sm-9 col-md-10"><p>© Алексей Слипченко 2021</p></div>
+                        <div class="col-xs-12 col-sm-3 col-md-2">
+                            <div class="footer-icons">
+                                <a href="" class="footer-1"></a>
+                                <a href="" class="footer-2"></a>
+                                <a href="" class="footer-3"></a>
+                                <a href="" class="footer-4"></a>
+                                <a href="" class="footer-5"></a>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
