--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
                         <div class="team">
                             <div class="col-xs-12 col-sm-6 col-md-3">
                                 <div class="team-image">
-                                    <div>
                                     <img src="файлы/team-1.png" alt="">
-                                    <div class="overlay"></div>
-                                </div>
                                     <div class="team-icons">
                                         <a href="" class="team-icon icon-twiter"></a>
                                         <a href="" class="team-icon icon-facebook"></a>
@@ -355,7 +352,9 @@
                         <div class="col-xs-12 col-sm-6 col-md-6">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi metus, tristique nec dolor non, ornare sagittis dolor. Nulla vestibulum lacus sed molestie gravida. </p>
                             <p>Cras fermentum elit quis magna congue, <span class="bold">vel sodales</span> arcu vestibulum. Nunc lobortis dui magna, quis dapibus lacus </p>
+                            <div class="btn-send-position">
                             <button class="btn-send">send message</button>
+                            </div>
                         </div>
                         </div>
                     </div>
@@ -385,5 +384,32 @@
             </div>
         </div>
     </footer>
+    <div class="modal hide">
+        <div class="modal-block">
+            <form action="">
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div class="btn-close">X</div>
+                </div>
+                <div class="flex-input">
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <p>Your Name</p>
+                        <input type="text">
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-6">
+                        <p>Your email</p>
+                        <input type="email">
+                    </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-12">
+                        <p>Your message</p>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                        <div class="btn-send-message">
+                        <button>send message</button>
+                        </div>
+                    </div>
+            </form>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
