--- a/index.html
+++ b/index.html
@@ -441,10 +441,12 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
-          spaceBetween: 30,
-          hashNavigation: {
-            watchState: true,
-          },
+            spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
           pagination: {
             el: ".swiper-pagination",
             clickable: true,
